src/Component/Layout/NavBar.css
.flex {
  display: flex;
  flex-direction: row;
}
.nav__container {
  width: 100%;
  margin: auto;
  background-color: #fff;
  overflow: hidden;
}
.nav__line-1 {
  align-items: center;
  justify-content: space-evenly;
  padding: 2rem 0 1rem 0;
}
.nav__logo-img {
  width: 10rem;
  margin-right: 3rem;
}
.nav__line-1 input {
  width: 60%;
  padding: 0.7rem;
  border-radius: 8px;
  border: 0.5px solid #808080;
}
.nav__line-1 input:focus {
  outline: none;
  background-color: #e6daee;
  box-shadow: 0 18px 32px rgba(0, 0, 0, 0.4);
}
.nav__line-1 button {
  padding: 0.6rem;
  width: 6rem;
  color: #251d3a;
  border: 1px solid rgb(212, 211, 211);
  border-radius: 8px;
  font-size: 1rem;
  position: relative;
}

.nav__line-2-laptop {
  width: 80%;
  margin: auto;
  justify-content: space-evenly;
  margin-top: 1rem;
  display: flex;
  flex-direction: row;
  padding-bottom: 2rem;
}
.nav__line-2-laptop h5 {
  font-size: 0.8rem;
  margin: 0 1rem;
  font-size: 1rem;
  font-weight: 500;
  color: #251d3a;
}
.nav__line-2-laptop h5:hover {
  cursor: pointer;
}
.dropdown__btn {
  background-color: transparent;
  border: none;
  font-size: 1rem;
  font-weight: 500;
  color: #251d3a;
  cursor: pointer;
}
.dropdown__background {
  background-color: #ffffff;
  border-radius: 8px;
  box-shadow: 0 5px 12px rgba(0, 0, 0, 0.4);
}

.dropdown__content-course {
  display: flex;
  justify-content: space-between;
  position: absolute;
  top: 17%;
  left: 12%;
  width: 18rem;
  padding: 1rem;
  z-index: 2;
  background-color: #fff;
  width: 30rem;
  height: 30rem;
  border-radius: 8px;
  box-shadow: 0 5px 12px rgba(0, 0, 0, 0.4);
}

.dropdown__content-company {
  position: absolute;
  top: 17%;
  right: 12%;
  width: 25rem;
  padding: 1rem;
  justify-content: space-evenly;
  z-index: 2;
}
.flex-column,
.left,
.right {
  display: flex;
  flex-direction: column;
}

.dropdown__background h5,
.dropdown__content-course h5 {
  color: #9e9898;
  font-weight: 600;
  padding: 0.6rem;
  font-size: 0.7rem;
}
.dropdown__background h5:hover,
.dropdown__content-course h5:hover {
  background-color: #e2d3f0cb;
  border-radius: 0 8px 0 8px;
  color: #251d3a;
  cursor: pointer;
}
.maune__icon {
  width: 3rem;
  height: 2rem;
}
.search__icon {
  width: 2rem;
  height: 3rem;
}
.search__icon-div {
  position: absolute;
  left: 75%;
  top: 3.5%;
  width: 1rem;
  height: 2rem;
}
.mobile__nav {
  display: none;
}
@media (max-width: 700px) {
  .nav__line-1 {
    align-items: center;
    justify-content: space-between;
    padding: 2rem 0;
    background-color: #fff;
  }
  .search__icon-div {
    display: none;
  }
  .mobile__nav {
    display: flex;
  }

  .nav__logo-img {
    width: 8rem;
    height: 2rem;
    margin-right: 3rem;
  }
  .nav__line-1 input {
    display: none;
  }

  .nav__hidden {
    display: none;
  }
  .nav__line-2 {
    width: 100%;
    height: 25rem;
    display: flex;
    flex-direction: column;
    align-items: left;
    background-color: #fff;
    border-radius: 8px;
  }
  .nav__line-2 h5 {
    margin: 0.5rem;
    font-size: 0.8rem;
    color: #251d3a;
    padding: 0.4rem 1rem;
    border-bottom: 1px solid #d3d0d0;
    font-weight: 600;
  }
  .nav__line-2 h5:hover,
  .dropdown__btn:hover {
    cursor: pointer;
    background-color: #eae4f7;
    color: #251d3a;
  }
  .dropdown__btn {
    padding: 0.5rem 1.5rem;
    color: #251d3a;
    font-weight: 700;
    font-size: 0.8rem;
  }
  .dropdown__background h5,
  .dropdown__content-course h5 {
    font-weight: 700;
    padding: 0.2rem;
    font-size: 0.6rem;
    color: #251d3a;
  }
  .dropdown__content-course {
    width: 20rem;
    padding: 1rem;
    z-index: 2;
    height: 30rem;
    border-radius: 8px;
    position: absolute;
    top: 30%;
    left: 2%;
  }

  .dropdown__content-company {
    position: absolute;
    top: 10%;
    left: 7%;
    width: 20rem;
    position: absolute;
    top: 58%;
    left: 2%;
  }
  .nav__line-1 .btn-1 {
    position: absolute;
    top: 48%;
    right: 15%;
    color: #251d3a;
    width: 30%;
  }
  .nav__line-1 .btn-2 {
    position: absolute;
    top: 48%;
    left: 5%;
    color: #251d3a;
    width: 30%;
  }
}

